Updated bio, added tooltips

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -159,3 +159,25 @@ a[ id= "contact" ]:target {
     -webkit-transform: translateY( -500px );
     transform: translateY( -500px );
 }
+
+.tooltip-inner {
+  background-color: white !important;
+  /*!important is not necessary if you place custom.css at the end of your css calls. For the purpose of this demo, it seems to be required in SO snippet*/
+  color: black;
+}
+
+.tooltip.top .tooltip-arrow {
+  border-top-color: white;
+}
+
+.tooltip.right .tooltip-arrow {
+  border-right-color: white;
+}
+
+.tooltip.bottom .tooltip-arrow {
+  border-bottom-color: white;
+}
+
+.tooltip.left .tooltip-arrow {
+  border-left-color: white;
+}
