--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -94,7 +94,7 @@ body, h1, h2, h3, h4, h5, h6 {
 .banner {
   padding: 100px 0;
   color: #f8f8f8;
-  background: url(../img/earth.jpg) no-repeat center center;
+  background: url(https://pre00.deviantart.net/a83d/th/pre/f/2018/168/a/f/crescent_moon_moon_wallpaper_1920_x_1200_by_mitsubishiman-dcelv3k.jpg) no-repeat center center;
   background-size: cover;
 }
 
@@ -180,4 +180,12 @@ a[ id= "contact" ]:target {
 
 .tooltip.left .tooltip-arrow {
   border-left-color: white;
+}
+
+footer a {
+  color: darkgrey;
+}
+footer a:hover {
+  color: black;
+  text-decoration: none;
 }
