--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -189,3 +189,8 @@ footer a:hover {
   color: black;
   text-decoration: none;
 }
+
+.headshot {
+  box-shadow: 8px 8px 10px #aaa;
+  border-radius: 5px;
+}
