--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -194,3 +194,11 @@ footer a:hover {
   box-shadow: 8px 8px 10px #aaa;
   border-radius: 5px;
 }
+
+#headshot-column {
+  margin: 0 10px;
+}
+
+.list-docs li {
+  margin-bottom: 1%;
+}
