:arrow_upper_right: Moved about/CV to front for job apps

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -222,3 +222,8 @@ footer a:hover {
 [data-toggle~="collapse"] {
     cursor: pointer;
 }
+
+.centered {
+  margin-right: auto;
+  margin-left: auto;
+}
