--- a/_includes/research.html
+++ b/_includes/research.html
@@ -11,7 +11,7 @@
         </h2>
 
         <p class="lead">
-          Ryan's research interests span fairness and interpretability in AI, computational economics, and philosophy of mind. He seeks to apply computing technology to social problems. 
+          Ryan's research interests span fairness and interpretability in AI, computational economics, and philosophy of mind. He applies computing technology to social problems. 
 
           <br><br>He is advised by <a href="https://www2.seas.gwu.edu/~aylin/">Aylin Caliskan</a>, <a href="https://www2.seas.gwu.edu/~simha/">Rahul Simha</a>, and <a href="https://benjamindwilliams.weebly.com">Ben Williams</a>.
         </p>
