:arrow_upper_right: added NCSSM link

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,7 +14,7 @@
             </h2>
             <p class="lead">
               Ryan Steed is a data scientist, project manager, and student.
-              He is studying Computational Economics at The George Washington University after graduating from the North Carolina School of Science and Mathematics in 2017.
+              He is studying Computational Economics at The George Washington University after graduating from the <a href="https://www.ncssm.edu">North Carolina School of Science and Mathematics</a> in 2017.
               He is also a Technology Fellow and project manager at the <a target="_touch" href="http://gwic.io">Innovation Center</a>, George Washington's student startup incubator and innovation accelerator.
             </p>
             <br>
