:sparkles: Minimal design - removed header

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,20 +10,34 @@
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">
-              About
+              Ryan Steed
             </h2>
             <p class="lead">
-              Ryan Steed is a data scientist, project manager, and student.
-              He is studying Computational Economics at The George Washington University after graduating from the <a href="https://www.ncssm.edu">North Carolina School of Science and Mathematics</a> in 2017.
-              He is also a Technology Fellow and project manager at the <a target="_touch" href="http://gwic.io">Innovation Center</a>, George Washington's student startup incubator and innovation accelerator.
+              I am a data scientist, researcher, and project manager.
+              I study Computational Economics at The George Washington University. I graduated from the <a href="https://www.ncssm.edu">North Carolina School of Science and Mathematics</a> in 2017.
+              I am also a Technology Fellow and project manager at the <a target="_touch" href="http://gwic.io">Innovation Center</a>, George Washington's student startup incubator and innovation accelerator.
             </p>
             <br>
-            <div>
-              <a href="docs/steed-cv.pdf" class="btn btn-secondary btn-lg">
-                <i class="far fa-file-alt fa-fw"></i>
-                <span class="network-name">Curriculum Vitae</span>
-              </a>
-            </div>
+            <ul class="list-inline banner-social-buttons" style="float: none">
+              <li class="list-inline-item">
+                <a href="docs/steed-cv.pdf" target="_blank" class="btn btn-secondary btn-lg">
+                  <i class="far fa-file-alt fa-fw"></i>
+                  <span class="network-name">C.V.</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/ryansteed" target="_blank" class="btn btn-secondary btn-lg">
+                  <i class="fa fa-github fa-fw"></i>
+                  <span class="network-name">Github</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/steedryan/" target="_blank" class="btn btn-secondary btn-lg white-tooltip">
+                  <i class="fa fa-linkedin fa-fw"></i>
+                  <span class="network-name">LinkedIn</span>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
 
