--- a/_includes/research.html
+++ b/_includes/research.html
@@ -11,9 +11,9 @@
         </h2>
 
         <p class="lead">
-          Ryan's research interests span fairness and interpretability in AI, computational economics, and philosophy of mind. He applies computing technology to social problems. 
+          My research interests span fairness and interpretability in AI, computational economics, and philosophy of mind. I apply computing technology to social problems. 
 
-          <br><br>He is advised by <a href="https://www2.seas.gwu.edu/~aylin/">Aylin Caliskan</a>, <a href="https://www2.seas.gwu.edu/~simha/">Rahul Simha</a>, and <a href="https://benjamindwilliams.weebly.com">Ben Williams</a>.
+          <br><br>My undergraduate work has been advised by <a href="https://www2.seas.gwu.edu/~aylin/">Aylin Caliskan</a>, <a href="https://www2.seas.gwu.edu/~simha/">Rahul Simha</a>, and <a href="https://benjamindwilliams.weebly.com">Ben Williams</a>.
         </p>
 
         <hr>
