--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,12 +37,9 @@
 <!-- /.banner -->
 
 <!-- Footer -->
-<footer>
+<!-- <footer>
   <div class="container">
     <ul class="list-inline">
-      <li class="list-inline-item">
-        <a href="#home">Home</a>
-      </li>
       <li class="footer-menu-divider list-inline-item">&sdot;</li>
       <li class="list-inline-item">
         <a href="#about">About</a>
@@ -61,4 +58,4 @@
       </li>
     </ul>
   </div>
-</footer>
+</footer> -->
