--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,14 +1,11 @@
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="#home">Ryan Steed</a>
+<nav class="navbar navbar-expand-lg navbar-fixed-top bg-light fixed-top">
+  <a class="navbar-brand" href="#about">Ryan Steed</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#about">About</a>
-      </li>
       <li class="nav-item">
         <a class="nav-link" href="#other-work">Research</a>
       </li>
