--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -94,13 +94,14 @@ body, h1, h2, h3, h4, h5, h6 {
 .banner {
   padding: 100px 0;
   color: #f8f8f8;
-  background: url(https://pre00.deviantart.net/a83d/th/pre/f/2018/168/a/f/crescent_moon_moon_wallpaper_1920_x_1200_by_mitsubishiman-dcelv3k.jpg) no-repeat center center;
+
+  background-color: #51514D !important;
   background-size: cover;
 }
 
 .banner h2 {
   margin: 0;
-  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
+  /*text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);*/
   font-size: 3em;
 }
 
