--- a/_includes/research.html
+++ b/_includes/research.html
@@ -36,67 +36,27 @@
             </div>
           </div>
           {% endfor %}
-
-          <!-- <div class="card">
-            <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#datasci" href="#datasci" aria-expanded="false" aria-controls="datasci">
-              <h5 class="mb-0">
-                  Data Science
-              </h5>
-            </div>
-
-            <div id="datasci" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-              <ul class="list-inline list-docs">
-                <li>
-                  <a href="docs/research-days_2019.pdf">Evolution of Innovation in Patent Citation Networks</a> &sdot; 2019 <br> <i>2<sup>nd</sup> Prize, GW Research Days.</i>
-                </li>
-                <li>
-                  <a href="docs/religious-growth.pdf">Effect of Religious Diversity on Growth</a> &sdot; 2018
-                </li>
-                <li>
-                  <a href="docs/ml-document-classification.html">ML Document Classification</a> &sdot; 2018 <br> <i>Tech talk presented at GWU ACM.</i>
-                </li>
-                <li>
-                  <a href="docs/drag.pdf">The Derivative Relational Attribute Graph Model for Link Prediction</a> &sdot; 2017
-                </li>
-                <li>
-                  <a href="https://www.isanet.org/Portals/0/Media/Conferences/SouthOrlando2017/South%20Orlando%202017%20-%20Full%20Program.pdf">The Practice and Promise of Open Source Intelligence and Computational Security Studies</a> &sdot; 2017 <br> <i>Presented at International Studies Association South Annual Conference, Orlando.</i>
-                </li>
-                <li>
-                  <a href="docs/event-coding.pdf">A Deep Learning Approach for CAMEO Coding</a> &sdot; 2017  <br> <i>Presented at ISA South Conference, Orlando.</i>
-                </li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#phil" href="#phil" aria-expanded="false" aria-controls="phil">
-              <h5 class="mb-0">
-                  Philosophy
-              </h5>
-            </div>
-
-            <div id="phil" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-              <ul class="list-inline list-docs">
-                <li>
-                  <a href="docs/descartes-spinoza.pdf">Sufficient Reason and Infinite Regress: Causal Consistency in Descartes and Spinoza</a> &sdot; 2018
-                </li>
-                <li>
-                  <a href="docs/mill.pdf">Constructive Intolerance: A Critique of Laissez-Faire Liberalism</a> &sdot; 2018
-                </li>
-                <li>
-                  <a href="docs/stevens.pdf">Wallace Stevens' Emancipated Individual: A World of One's Own</a> &sdot; 2018
-                </li>
-                <li>
-                  <a href="docs/plato-popper.pdf">From Plato to Popper: Platonic Forms in Modern Science and Quantum Theory</a> &sdot; 2017
-                </li>
-              </ul>
-            </div>
-          </div> -->
         </div>
-      </div>
-
     </div>
+  </div>
 
+  <div class="row">
+    <div class="col-lg-9" style="margin: auto auto;">
+      <br>
+      <h4>News</h4>
+      <div class="list-group list-group-flush">
+        {% for news in site.data.news %}
+        <a href="{{news.link}}" class="list-group-item list-group-item-action flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">{{news.header}}</h5>
+            <small>{{news.date}}</small>
+          </div>
+          <p class="mb-1">{{news.message}}</p>
+          <!-- <small>Donec id elit non mi porta.</small> -->
+        </a>
+        {% endfor %}
+      </div>
+    </div>
   </div>
   <!-- /.container -->
 
