--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,7 @@
         <a class="nav-link" href="#other-work">Research</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#portfolio">Portfolio</a>
+        <a class="nav-link" href="#portfolio">Projects</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#contact">Contact</a>
