--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-fixed-top bg-light fixed-top">
+<nav class="navbar navbar-dark navbar-expand-lg navbar-fixed-top bg-dark fixed-top">
   <a class="navbar-brand" href="#about">Ryan Steed</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
