:arrow_upper_right: Updated projects

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,9 +13,9 @@
               Ryan Steed
             </h2>
             <p class="lead">
-              I am a data scientist, researcher, and project manager.
+              I am a researcher, data scientist and project manager.
               I study Computational Economics at The George Washington University. I graduated from the <a href="https://www.ncssm.edu">North Carolina School of Science and Mathematics</a> in 2017.
-              I am also a Technology Fellow and project manager at the <a target="_touch" href="http://gwic.io">Innovation Center</a>, George Washington's student startup incubator and innovation accelerator.
+              I am also a Technology Fellow and project manager at the <a target="_touch" href="http://gwic.io">Innovation Center</a>, George Washington's social innovation accelerator.
             </p>
             <br>
             <ul class="list-inline banner-social-buttons" style="float: none">
