--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,8 +1,7 @@
 {% for item in site.data.portfolio %}
+  {% unless item.exclude %}
   {% capture type %}{% cycle 'a', 'b' %}{% endcapture %}
-
   <section id="portfolio" class="content-section-{{type}}">
-
     <div class="container">
       <div class="row">
         {% if type == 'a' %}
@@ -46,5 +45,5 @@
     </div>
     <!-- /.container -->
   </section>
-
+  {% endunless %}
 {% endfor %}
