:sparkles: Compact portfolio layout

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,49 +1,31 @@
-{% for item in site.data.portfolio %}
-  {% unless item.exclude %}
-  {% capture type %}{% cycle 'a', 'b' %}{% endcapture %}
-  <section id="portfolio" class="content-section-{{type}}">
-    <div class="container">
-      <div class="row">
-        {% if type == 'a' %}
-        <div class="col-md-5 ml-auto">
-          <img class="img-fluid" src="{{item.img}}" style="max-width: {{item.img-size}}" alt="">
+<section id="portfolio" class="content-section-a">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-9" style="margin: auto auto;">
+        <hr class="section-heading-spacer">
+        <div class="clearfix"></div>
+        <h2 class="section-heading">
+          Projects
+        </h2>
+        <div class="row">
+      {% for item in site.data.portfolio %}
+      {% unless item.exclude %}
+      <div class="col-lg-6 mb-4 centered">
+        <div class="card h-100">
+          <a href="{{item.url}}"><img class="card-img-top" src="{{item.img}}" alt="" style="object-fit: {{item.imgfit}}"></a>
+          <div class="card-body">
+            <h4 class="card-title">
+              <a href="{{item.url}}">{{item.title}}</a>
+            </h4>
+            <p class="card-text">{{item.description}} {% if item.github %}<a href="https://github.com/{{item.github}}"><i class="fa fa-github"></i></a>{% endif %}{% if item.news %}<a href="{{item.news}}"><i class="fas fa-rss-square"></i></a>{% endif %}</p>
+          </div>
         </div>
-        <div class="col-md-5 mr-auto">
-          <hr class="section-heading-spacer">
-          <div class="clearfix"></div>
-          <h2 class="section-heading">
-            {% if item.featured %}
-            Featured Project:
-            <br>
-            {% endif %}
-            <a target="_blank" href="{{item.url}}">{{item.title}}</a>
-          </h2>
-          <p class="lead">
-            {{item.description}} {% if item.github %}<a href="https://github.com/{{item.github}}"><i class="fa fa-github"></i></a>{% endif %}{% if item.news %}<a href="{{item.news}}"><i class="fas fa-rss-square"></i></a>{% endif %}
-          </p>
-        </div>
-        {% else %}
-        <div class="col-md-5 ml-auto">
-          <hr class="section-heading-spacer">
-          <div class="clearfix"></div>
-          <h2 class="section-heading">
-            {% if item.featured %}
-            Featured Project:
-            <br>
-            {% endif %}
-            <a target="_blank" href="{{item.url}}">{{item.title}}</a>
-          </h2>
-          <p class="lead">
-            {{item.description}} {% if item.github %}<a href="https://github.com/{{item.github}}"><i class="fa fa-github"></i></a>{% endif %}{% if item.news %}<a href="{{item.news}}"><i class="fas fa-rss-square"></i></a>{% endif %}
-          </p>
-        </div>
-        <div class="col-md-5 mr-auto">
-          <img class="img-fluid" src="{{item.img}}" style="max-width: {{item.img-size}}" alt="">
-        </div>
-        {% endif %}
+      </div>
+      {% endunless %}
+      {% endfor %}
+    </div>
       </div>
     </div>
-    <!-- /.container -->
-  </section>
-  {% endunless %}
-{% endfor %}
+    
+  </div>
+</section>
