--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -101,7 +101,6 @@ body, h1, h2, h3, h4, h5, h6 {
 
 .banner h2 {
   margin: 0;
-  /*text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);*/
   font-size: 3em;
 }
 
@@ -124,7 +123,6 @@ body, h1, h2, h3, h4, h5, h6 {
 @media(max-width:767px) {
   .banner h2 {
     margin: 0;
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
     font-size: 3em;
   }
   ul.banner-social-buttons>li {
@@ -268,4 +266,27 @@ footer a:hover {
     max-height: 175px;
     overflow:scroll;
     -webkit-overflow-scrolling: touch;
+}
+
+.card {
+  font-weight: 300;
+}
+
+.card-title {
+  font-weight: normal;
+}
+
+.card-img-top {
+  height: 25vw;
+  object-fit: cover;
+}
+
+@media(max-width:767px) {
+  .card-img-top {
+    height: 80vw;
+  }
+}
+
+a:hover {
+  text-decoration: none;
 }
