:pencil: Updated about page

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,9 +13,7 @@
               Ryan Steed
             </h2>
             <p class="lead">
-              I am a researcher, data scientist and project manager.
-              I study Computational Economics at The George Washington University. I graduated from the <a href="https://www.ncssm.edu">North Carolina School of Science and Mathematics</a> in 2017.
-              I am also a Technology Fellow and project manager at the <a target="_touch" href="http://gwic.io">Innovation Center</a>, George Washington's social innovation accelerator.
+              I am a researcher, data scientist, and project manager. Currently, I am a PhD student at Carnegie Mellon's <a href="https://www.heinz.cmu.edu/">Heinz College of Information Systems & Public Policy</a>. Previously, I studied Computational Economics at the George Washington University. I am also an alum of the <a href="https://www.ncssm.edu">North Carolina School of Science and Mathematics</a>.
             </p>
             <br>
             <ul class="list-inline banner-social-buttons" style="float: none">
