--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <!-- Header -->
 <header class="intro-header">
-  <div class="container" id="home">
+  <div class="container">
     <div class="intro-message">
       <h1>Ryan Steed</h1>
       <!-- <h3>Personal Portfolio</h3> -->
