--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,19 +1,19 @@
 <!-- Navigation -->
 <nav class="navbar navbar-dark navbar-expand-lg navbar-fixed-top bg-dark fixed-top">
-  <a class="navbar-brand" href="#about">Ryan Steed</a>
+  <a class="navbar-brand" href="/index#about">Ryan Steed</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#other-work">Research</a>
+        <a class="nav-link" href="/index#other-work">Research</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#portfolio">Projects</a>
+        <a class="nav-link" href="/index#portfolio">Projects</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact</a>
+        <a class="nav-link" href="/index#contact">Contact</a>
       </li>
     </ul>
   </div>
