:bug: Fixed paper link bug

--- a/_layouts/talks.html
+++ b/_layouts/talks.html
@@ -17,7 +17,7 @@
 					<li>View the slides <a href="{{page.slides}}" target="blank">here</a>.</li>
 				{% endif %}
 				{% if page.paper %}
-					<li>Read the paper <a href="{{paper}}" target="blank">here</a>.</li>
+					<li>Read the paper <a href="{{page.paper}}" target="blank">here</a>.</li>
 				{% endif %}
 				{% if page.video %}
 					<li>
