--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,57 +1,7 @@
 <head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="The personal profile and project feature page for Ryan Steed." />
-    <meta name="keywords" content="Ryan Steed, Burlington, Durham, DC, Github, Ryan Brannon Steed"></meta>
-    <meta property="og:description" content="Featured projects, bio, and contact information for Ryan Steed.">
-    <meta name="author" content="Ryan Steed">
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Ryan Steed - Homepage" />
-    <meta property="og:url" content="https://ryansteed.github.io/"  />
-    <meta property="og:image" content="/img/RyanSteed_Headshot.jpg" />
-    <meta property="og:image:width" content="100" />
-    <meta property="og:image:height" content="100" />
-    <meta name="twitter:card" content="summary_large_image">
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+    {% include head-meta.html %}
 
-    <title>Ryan Steed - Homepage</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom fonts for this template -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-
-    <!-- Custom styles for this template -->
-    <link href="/css/landing-page.css" rel="stylesheet">
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="/vendor/jquery/jquery.min.js"></script>
-    <script src="/vendor/popper/popper.min.js"></script>
-    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/js/scroll.js"></script>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109682218-1"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-109682218-1');
-
-    $(function () {
-      $(document).scroll(function () {
-        var $nav = $(".navbar-fixed-top");
-        $nav.toggleClass('scrolled', $(this).scrollTop() > $nav.height());
-      });
-    });
-    </script>
-
+    {% include head-deps.html %}
 
   </head>
