--- a/_layouts/talks.html
+++ b/_layouts/talks.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   
-  {% include head.html %}
+  <head>
+
+  	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="Ryan Steed's presentation @ {{page.venue}}" />
+	<meta name="keywords" content="Ryan Steed, {{page.venue}}"></meta>
+	<meta property="og:description" content="{{page.title}}">
+	<meta name="author" content="Ryan Steed">
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="Ryan Steed @ {{page.venue}}" />
+<!-- 	<meta property="og:image" content="/img/RyanSteed_Headshot.jpg" />
+	<meta property="og:image:width" content="100" />
+	<meta property="og:image:height" content="100" /> -->
+	<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+
+	<title>Ryan Steed @ {{page.venue}}</title>
+
+  	{% include head-deps.html %}
+
+  </head>
 
   <body>
 
