:arrow_upper_right: Converted to pure-icon social links

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,21 +18,23 @@
             <br>
             <ul class="list-inline banner-social-buttons" style="float: none">
               <li class="list-inline-item">
-                <a href="docs/steed-cv.pdf" target="_blank" class="btn btn-secondary btn-lg">
-                  <i class="far fa-file-alt fa-fw"></i>
-                  <span class="network-name">C.V.</span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://github.com/ryansteed" target="_blank" class="btn btn-secondary btn-lg">
+                <a href="https://github.com/ryansteed" target="_blank">
                   <i class="fa fa-github fa-fw"></i>
-                  <span class="network-name">Github</span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/steedryan/" target="_blank" class="btn btn-secondary btn-lg white-tooltip">
+                <a href="docs/steed-cv.pdf" target="_blank">
+                  <i class="ai ai-cv fa-fw"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/steedryan/" target="_blank">
                   <i class="fa fa-linkedin fa-fw"></i>
-                  <span class="network-name">LinkedIn</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://scholar.google.com/citations?user=3L0OFOcAAAAJ" target="_blank">
+                  <i class="ai ai-google-scholar fa-fw"></i>
                 </a>
               </li>
             </ul>
