--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -113,6 +113,12 @@ body, h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
 }
 
+.banner-social-buttons a {
+  color: rgba(0,0,0,0.6);
+  font-size: 2rem;
+  display: inline-flex;
+}
+
 @media(max-width:1199px) {
   ul.banner-social-buttons {
     float: left;
@@ -126,8 +132,8 @@ body, h1, h2, h3, h4, h5, h6 {
     font-size: 3em;
   }
   ul.banner-social-buttons>li {
-    display: block;
-    margin-bottom: 20px;
+    /*display: block;*/
+    /*margin-bottom: 20px;*/
     padding: 0;
   }
   ul.banner-social-buttons>li:last-child {
@@ -316,3 +322,4 @@ a:hover {
 .talk-resources li {
   padding: 0.25em 0em;
 }
+
