:sparkles: Gitlab link

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -23,6 +23,11 @@
                 </a>
               </li>
               <li class="list-inline-item">
+                <a href="https://gitlab.com/ryansteed" target="_blank">
+                  <i class="fa fa-gitlab fa-fw"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
                 <a href="https://www.linkedin.com/in/steedryan/" target="_blank">
                   <i class="fa fa-linkedin fa-fw"></i>
                 </a>
