:arrow_upper_right: Updated social, new news section

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,10 +10,10 @@
         <a class="nav-link" href="/index#other-work">Research</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/index#portfolio">Projects</a>
+        <a class="nav-link" href="/index#news">News</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/index#contact">Contact</a>
+        <a class="nav-link" href="/index#portfolio">Projects</a>
       </li>
     </ul>
   </div>
