--- a/_includes/research.html
+++ b/_includes/research.html
@@ -11,7 +11,7 @@
         </h2>
 
         <p class="lead">
-          My research interests span fair & responsible AI, privacy, and computational economics.
+          My research interests span fair & responsible machine learning, privacy, and information economics.
 
           <br><br>My undergraduate work was advised by <a href="https://www2.seas.gwu.edu/~aylin/">Aylin Caliskan</a>, <a href="https://www2.seas.gwu.edu/~simha/">Rahul Simha</a>, and <a href="https://benjamindwilliams.weebly.com">Ben Williams</a>.
         </p>
@@ -46,8 +46,5 @@
         </div>
     </div>
   </div>
-
-  {% include news.html %}
-  <!-- /.container -->
 
 </section>
