--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,13 +18,13 @@
             <br>
             <ul class="list-inline banner-social-buttons" style="float: none">
               <li class="list-inline-item">
-                <a href="https://github.com/ryansteed" target="_blank">
-                  <i class="fa fa-github fa-fw"></i>
+                <a href="mailto:ryansteed@cmu.edu" target="_blank">
+                  <i class="fa fa-envelope fa-fw"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://gitlab.com/ryansteed" target="_blank">
-                  <i class="fa fa-gitlab fa-fw"></i>
+                <a href="https://twitter.com/ryanbsteed" target="_blank">
+                  <i class="fa fa-twitter fa-fw"></i>
                 </a>
               </li>
               <li class="list-inline-item">
@@ -32,6 +32,16 @@
                   <i class="fa fa-linkedin fa-fw"></i>
                 </a>
               </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/ryansteed" target="_blank">
+                  <i class="fa fa-github fa-fw"></i>
+                </a>
+              </li>
+              <!-- <li class="list-inline-item">
+                <a href="https://gitlab.com/ryansteed" target="_blank">
+                  <i class="fa fa-gitlab fa-fw"></i>
+                </a>
+              </li> -->
               <li class="list-inline-item">
                 <a href="https://scholar.google.com/citations?user=3L0OFOcAAAAJ" target="_blank">
                   <i class="ai ai-google-scholar fa-fw"></i>
