--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,18 +1,25 @@
-<div class="row">
-  <div class="col-lg-9" style="margin: auto auto;">
-    <br>
-    <h4>News</h4>
-    <div class="list-group list-group-flush">
-      {% assign sorted = (site.data.news | sort: 'date') | reverse %}
-      {% for news in sorted %}
-      <a href="{{news.link}}" class="list-group-item list-group-item-action flex-column align-items-start">
-        <div class="d-flex w-100 justify-content-between">
-          <h5 class="mb-1">{{news.header}}</h5>
-          <small>{{news.date}}</small>
+<section class="content-section-a" id="news">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-9" style="margin: auto auto;">
+        <hr class="section-heading-spacer">
+        <div class="clearfix"></div>
+        <h2 class="section-heading">
+          News
+        </h2>
+        <div class="list-group list-group-flush">
+          {% assign sorted = (site.data.news | sort: 'date') | reverse %}
+          {% for news in sorted %}
+          <a href="{{news.link}}" class="list-group-item list-group-item-action flex-column align-items-start">
+            <div class="d-flex w-100 justify-content-between">
+              <h5 class="mb-1">{{news.header}}</h5>
+              <small>{{news.date}}</small>
+            </div>
+            <p class="mb-1">{{news.message}}</p>
+          </a>
+          {% endfor %}
         </div>
-        <p class="mb-1">{{news.message}}</p>
-      </a>
-      {% endfor %}
+      </div>
     </div>
   </div>
-</div>
+</section>
