--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,4 +1,4 @@
-<section id="portfolio" class="content-section-a">
+<section id="portfolio" class="content-section-b">
   <div class="container">
     <div class="row">
       <div class="col-lg-9" style="margin: auto auto;">
