--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -269,7 +269,7 @@ footer a:hover {
 
 .list-group {
     font-weight: 400;
-    max-height: 300px;
+    max-height: 600px;
     overflow:scroll;
 }
 
@@ -298,6 +298,10 @@ footer a:hover {
 .card-img-top {
   height: 25vw;
   object-fit: cover;
+}
+
+.card-body {
+  background-color: #f8f8f8;;
 }
 
 @media(max-width:767px) {
