--- a/_includes/news.html
+++ b/_includes/news.html
@@ -10,7 +10,7 @@
         <div class="list-group list-group-flush">
           {% assign sorted = (site.data.news | sort: 'date') | reverse %}
           {% for news in sorted %}
-          <a href="{{news.link}}" class="list-group-item list-group-item-action flex-column align-items-start">
+          <a target="blank" href="{{news.link}}" class="list-group-item list-group-item-action flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between">
               <h5 class="mb-1">{{news.header}}</h5>
               <small>{{news.date}}</small>
