--- a/_includes/head-meta.html
+++ b/_includes/head-meta.html
@@ -12,7 +12,6 @@
 <meta property="og:image:height" content="100" />
 <meta name="twitter:card" content="summary_large_image">
 <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+<link rel="icon" type="image/png" href="img/favicon-cmu.png">
 
 <title>Ryan Steed - Homepage</title>
