--- a/_layouts/talks.html
+++ b/_layouts/talks.html
@@ -31,8 +31,16 @@
   	<div class="container" style="padding: 50px; font-weight: normal">
 		<div class="row">
 			<div class="col-lg-12 text-center">
-				<h1 class="mt-5">Presentation @ <a href="{{page.listing}}">{{page.venue}}</a></h1>
-				<p class="lead">"{{page.title}}"</p>
+				<h1 class="mt-5">{{page.title}}</h1>
+				<h4 class="mt-4 text-center">
+					Presentation @ <a href="{{page.listing}}">{{page.venue}}</a>
+				</h4>
+				{% if page.with %}
+				<p class="lead">
+					with
+					{% for author in page.with %}{% if forloop.first %}{{author}}{% elsif forloop.last %} and {{author}}{% else %}, {{author}}{% endif %}{% endfor %}
+				</p>
+				{% endif %}
 				<ul class="list-unstyled talk-resources">
 				{% if page.slides %}
 					<li>View the slides <a href="{{page.slides}}" target="blank">here</a>.</li>
@@ -40,11 +48,11 @@
 				{% if page.paper %}
 					<li>Read the paper <a href="{{page.paper}}" target="blank">here</a>.</li>
 				{% endif %}
-				{% if page.video %}
+				<!-- {% if page.video %}
 					<li>
 						Watch the presentation <a href="{{page.video}}" target="blank">here</a>.
 					</li>
-				{% endif %}
+				{% endif %} -->
 				{% if page.youtube %}
 					<li><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/{{page.youtube}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 				{% endif %}
