:arrow_upper_right: Added GWU link

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,7 +13,7 @@
               Ryan Steed
             </h2>
             <p class="lead">
-              I am a researcher, data scientist, and project manager. Currently, I am a first-year PhD student at Carnegie Mellon's <a href="https://www.heinz.cmu.edu/">Heinz College of Information Systems & Public Policy</a>. Previously, I studied Computational Economics at the George Washington University. I am also an alum of the <a href="https://www.ncssm.edu">North Carolina School of Science and Mathematics</a>.
+              I am a researcher, data scientist, and project manager. Currently, I am a first-year PhD student at Carnegie Mellon's <a href="https://www.heinz.cmu.edu/">Heinz College of Information Systems & Public Policy</a>. Previously, I studied Computational Economics at the <a href="https://www.gwu.edu">George Washington University</a>. I am also an alum of the <a href="https://www.ncssm.edu">North Carolina School of Science and Mathematics</a>.
             </p>
             <br>
             <ul class="list-inline banner-social-buttons" style="float: none">
