--- a/_includes/research.html
+++ b/_includes/research.html
@@ -20,6 +20,7 @@
 
         <div class="accordion" id="work">
           {% for section in site.data.research %}
+          {% if section.data %}
           <div class="card">
             <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#{{section.id}}" href="#{{section.id}}" aria-expanded="{{forloop.first}}" aria-controls="{{section.id}}">
               <h5 class="mb-0">{{section.subject}}</h5>
@@ -42,6 +43,7 @@
               </ul>
             </div>
           </div>
+          {% endif %}
           {% endfor %}
         </div>
     </div>
