:arrow_upper_right: Added site description

--- a/_includes/head-meta.html
+++ b/_includes/head-meta.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="The personal profile and project feature page for Ryan Steed." />
 <meta name="keywords" content="Ryan Steed, CMU, GWU, Pittsburgh, Durham, DC"></meta>
-<meta property="og:description" content="Featured projects, bio, and contact information for Ryan Steed.">
+<meta property="og:description" content=" I am a researcher, data scientist, and project manager. Currently, I am a first-year PhD student at Carnegie Mellon's Heinz College of Information Systems & Public Policy</a>.">
 <meta name="author" content="Ryan Steed">
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Ryan Steed - Homepage" />
