--- a/_includes/research.html
+++ b/_includes/research.html
@@ -11,9 +11,10 @@
         </h2>
 
         <p class="lead">
-          My research interests span fair & responsible machine learning, privacy, and information economics.
-
-          <br><br>My undergraduate work was advised by <a href="https://www2.seas.gwu.edu/~aylin/">Aylin Caliskan</a>, <a href="https://www2.seas.gwu.edu/~simha/">Rahul Simha</a>, and <a href="https://benjamindwilliams.weebly.com">Ben Williams</a>.
+          My research interests span algorithmic bias, private & fair machine learning, and welfare economics.
+          <br>
+          <br>
+          I am co-advised by <a href="https://www.heinz.cmu.edu/~acquisti">Alessandro Acquisti</a> and <a href="http://www.andrew.cmu.edu/user/achoulde">Alexandra Chouldechova</a>. My undergraduate work was advised by <a href="https://www2.seas.gwu.edu/~aylin/">Aylin Caliskan</a>, <a href="https://www2.seas.gwu.edu/~simha/">Rahul Simha</a>, and <a href="https://benjamindwilliams.weebly.com">Ben Williams</a>.
         </p>
 
         <hr>
