--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -219,6 +219,12 @@ footer a:hover {
   font-size: 0.85rem;
 }
 
+.press {
+  color: rgba(0,0,0,0.6);
+  font-size: 0.85rem;
+  font-style: italic;
+}
+
 .accordion .card {
   margin: 5px;
 }
