:sparkles: FAccT 2021 news

--- a/_includes/news.html
+++ b/_includes/news.html
@@ -13,7 +13,7 @@
           <a target="blank" href="{{news.link}}" class="list-group-item list-group-item-action flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between">
               <h5 class="mb-1">{{news.header}}</h5>
-              <small>{{news.date}}</small>
+              <small>{{news.date | date: "%m/%d/%Y"}}</small>
             </div>
             <p class="mb-1">{{news.message}}</p>
           </a>
