--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,9 +12,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/index#news">News</a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="/index#portfolio">Projects</a>
-      </li>
+      </li> -->
     </ul>
   </div>
 </nav>
